move shit out of big rmd, into component scripts

--- a/explore.Rmd
+++ b/explore.Rmd
@@ -17,6 +17,10 @@ options(mc.cores = parallel::detectCores())
 future::plan("multiprocess")
 
 load(here::here("ignore", "data_R", "raw.rda"))
+load(here::here("ignore", "data_R", "boots.rda"))
+load(here::here("ignore", "data_R", "aprime_by_ppm.rda"))
+load(here::here("ignore", "data_R", "preplots_rstanarm.rda"))
+load(here::here("ignore", "data_R", "preplots_rt_rstanarm.rda"))
 
 snodgrass <- function (num, denom) return((num+.5)/(denom+1))
 snodgrass_vec <- function (vec) return((sum(vec) + 0.5) / (length(vec) + 1))
@@ -26,127 +30,6 @@ sdt_aprime <- function (hit, fa) return(.5 + (sign(hit-fa)*((hit-fa)^2 + abs(hit
 sdt_b2prime <- function (hit, fa)  return(sign(hit-fa)*(hit*(1-hit) - fa*(1-fa))/(hit*(1-hit) + fa*(1-fa)))
 sdt_dprime <- function (hit, fa) return(qnorm(hit) - qnorm(fa))
 sdt_c <- function (hit, fa) return(-.5 * (qnorm(hit) + qnorm(fa)))
-
-posterior_preplot_params <- function (object) {
-  out <- object %>%
-    as.data.frame() %>%
-    as_tibble() %>%
-    mutate(iteration = 1:nrow(.)) %>%
-    # removes all random effects and sigma terms. should yield fixed effects only
-    select(-contains("["), -contains("sigma")) %>%
-    rename(intercept = "(Intercept)") %>%
-    pivot_longer(cols = -iteration, names_to = "term", values_to = "estimate")
-  
-  return (out)
-}
-
-posterior_preplot_bysubj <- function (object, newdata, pred_col = "y_pred", type = c("median", "mean", "by_iter", "trialwise"), draws = 1000) {
-  # if (type == "trialwise" & draws > 10) stop("too many posterior_predict draws, probably!")
-  if (type != "trialwise") {
-    out <- object %>%
-    rstanarm::posterior_linpred(transform = TRUE,
-                                newdata = newdata,
-                                re.form = NULL,
-                                draws = draws)
-  } else {
-    out <- object %>%
-      rstanarm::posterior_predict(newdata = newdata,
-                                  draws = draws,
-                                  re.form = NULL)
-  }
-  if (type == "by_iter") {
-    
-    newdata %<>%
-      # Must expand AFTER predictions is already done to repeat for iterations
-      # need the "obs" column to make damn sure that the correct predicted points get pasted on the correct x values
-      mutate(obs = 1:nrow(.),
-             iteration = map(obs, ~1:draws)) %>%
-      unchop(iteration)
-    
-    out %>%
-      as_tibble() %>%
-      mutate(iteration = 1:nrow(.)) %>%
-      pivot_longer(cols = -iteration, names_to = "obs", values_to = pred_col) %>%
-      mutate(obs = as.integer(obs)) %>%
-      right_join(newdata, by = c("obs", "iteration")) %>%
-      # the obs column obstructs any later pivoting, and is technically redundant if all the x cols are in there,
-      # so get outta here
-      select(-obs)
-    
-    return(out)
-    
-  } else if (type == "median" | type == "mean") {
-    # Just the median of every predicted point for every subject
-    # Note that this doesn't select in a paired way for the "median iteration"
-    # returns a VECTOR which needs to get slapped onto newdata
-    if (type == "median") {
-      out %<>%
-      apply(2, median)
-    } else if (type == "mean") {
-      out %<>%
-      apply(2, mean)
-    }
-    out %<>%
-      t() %>%
-      c()
-    
-    newdata %<>%
-      mutate(!!pred_col := out)
-    
-    return (newdata)
-  } else if (type == "trialwise") {
-    
-    newdata %<>%
-      # Must expand AFTER predictions is already done to repeat for iterations
-      # need the "obs" column to make damn sure that the correct predicted points get pasted on the correct x values
-      mutate(obs = 1:nrow(.))
-    
-    out %<>%
-      t() %>%
-      as_tibble(.name_repair = "universal") %>%
-      mutate(obs = 1:nrow(.)) %>%
-      right_join(newdata, by = "obs") %>%
-      pivot_longer(cols = starts_with("..."), names_to = "iteration", values_to = pred_col) %>%
-      mutate(iteration = as.integer(str_sub(iteration, start = 4L))) %>%
-      # the obs column obstructs any later pivoting, and is technically redundant if all the x cols are in there,
-      # so get outta here
-      select(-obs)
-    
-    if (length(unique(out$iteration)) == 1) out %<>% select(-iteration)
-    
-    return(out)
-    
-  }
-  
-}
-
-posterior_preplot_fixef <- function (object, newdata, pred_col = "y_pred", draws = 1000) {
-  
-  out <- object %>%
-    rstanarm::posterior_linpred(transform = TRUE,
-                                newdata = newdata,
-                                re.form = NA,
-                                draws = draws)
-  
-  newdata %<>%
-    # Must expand AFTER predictions is already done to repeat for iterations
-    # need the "obs" column to make damn sure that the correct predicted points get pasted on the correct x values
-    mutate(obs = 1:nrow(.),
-           iteration = map(obs, ~1:draws)) %>%
-    unchop(iteration)
-  
-  out %<>%
-    as_tibble() %>%
-    mutate(iteration = 1:nrow(.)) %>%
-    pivot_longer(cols = -iteration, names_to = "obs", values_to = pred_col) %>%
-    mutate(obs = as.integer(obs)) %>%
-    right_join(newdata, by = c("obs", "iteration")) %>%
-    # the obs column obstructs any later pivoting, and is technically redundant if all the x cols are in there,
-    # so get outta here
-    select(-obs)
-  
-  return(out)
-}
 ```
 
 ## checking data quality
@@ -261,44 +144,6 @@ sdt_metrics %>%
 - **major plot**: residualized A' difference ~ raw ppm difference
 - **minor plot**: coefplot of A' diff ~ A' off + ppm diff models for each of the 4 conditions
 
-```{r}
-aprime_by_ppm <- raw %>%
-  filter(valid == 1) %>%
-  mutate(corResp = recode(corResp, `0` = "fa", `1` = "hit"),
-         on_smoking = recode(on_smoking, `0` = "off", `1` = "on"),
-         exptCond = recode(exptCond, `0` = "control", `1` = "relational")) %>%
-  group_by(subj_num, ppm, on_smoking, exptCond, probe, corResp) %>%
-  summarize(rate = mean(resp)) %>%
-  pivot_wider(names_from = corResp, values_from = rate, names_prefix = "rate_") %>%
-  mutate(aprime = sdt_aprime(rate_hit, rate_fa)) %>%
-  select(-starts_with("rate")) %>%
-  pivot_wider(names_from = on_smoking, values_from = c(aprime, ppm)) %>%
-  mutate(ppm_diff = ppm_on - ppm_off,
-         aprime_diff = aprime_on - aprime_off,
-         aprime_off_c = aprime_off - 0.5) %>%
-  arrange(exptCond, probe, aprime_off, aprime_diff) %>%
-  group_by(exptCond, probe) %>%
-  mutate(rank_aprime_off = 1:n()) %>%
-  nest(data = -c(exptCond, probe)) %>%
-  mutate(resid_aprime_diff = map(data, ~lm(aprime_diff ~ aprime_off_c, data = .x) %>%
-                                   broom::augment() %>%
-                                   select(aprime_diff_resid = .resid)),
-         resid_ppm_diff = map(data, ~lm(ppm_diff ~ aprime_off_c, data = .x) %>%
-                                broom::augment() %>%
-                                select(ppm_diff_resid = .resid)),
-         data = pmap(list(data, resid_aprime_diff, resid_ppm_diff),
-                     function(a, b, c) {bind_cols(a, b, c)}),
-         model = map(data, ~lm(aprime_diff ~ aprime_off_c + ppm_diff, data = .x)),
-         augs = map(model, ~.x %>%
-                            broom::augment() %>%
-                            select(aprime_diff_fit = .fitted)),
-         resid_augs = map(data, ~lm(aprime_diff_resid ~ ppm_diff_resid, data = .x) %>%
-                            broom::augment() %>%
-                            select(aprime_diff_fit_resid = .fitted)),
-         data = map2(data, augs, ~bind_cols(.x, .y)),
-         data = map2(data, resid_augs, ~bind_cols(.x, .y))) %>%
-  select(-starts_with("resid"), -augs)
-```
 
 ```{r}
 aprime_by_ppm %>%
@@ -362,76 +207,6 @@ sdt_metrics %>%
 ## bootstrap analysis
 
 To relieve memory stress, trialwise bootstrap information will _not_ be retained in the final form of this model object. I tried briefly to figure out how to use `rsample::bootstraps()` to do this, but it doesn't seem to readily support hierarchical 2-level bootstrapping. One could do full-on cluster bootstrapping by `nest()`-ing to get one row per subject, and then _just_ resample subjects, leaving intact their responses on particular trials. However, I want to reproduce 2-level uncertainty on the between and within-subject level. Here goes.
-
-```{r, eval = FALSE}
-boots_by_subj <- raw %>%
-  filter(valid == 1) %>%
-  select(-c(valid, session_num, condition, cue)) %>%
-  mutate(corResp = recode(corResp, `0` = "fa", `1` = "hit"),
-         on_smoking = recode(on_smoking, `0` = "off", `1` = "on"),
-         exptCond = recode(exptCond, `0` = "control", `1` = "relational")) %>%
-  nest(trials = -c(subj_num, ppm, on_smoking, exptCond, probe, corResp)) %>%
-  nest(conditions = -subj_num) %>%
-  nest(subjects = everything()) %>%
-  # note that here, 1:n() is 1:1
-  slice(rep(1:n(), each = 200)) %>%
-  mutate(iteration = 1:n(),
-         # resample outer level: subjects
-         subjects = furrr::future_map(subjects, ~sample_frac(.x, size = 1, replace = TRUE) %>%
-                          mutate(subj_num = 1:nrow(.)),
-                          .progress = TRUE)) %>%
-  unnest(subjects) %>%
-  unnest(conditions) %>%
-  # CHANGE N BOOTSTRAPS HERE
-  # resample inner level: trials (honoring condition structure)
-  mutate(boots = furrr::future_map(trials, ~rsample::bootstraps(.x, times = 1) %>%
-                       mutate(rate = map_dbl(splits, ~mean(as.data.frame(.x)$resp))) %>% 
-                       select(rate),
-                       .progress = TRUE)) %>%
-  select(-trials) %>%
-  unnest(boots) %>%
-  pivot_wider(names_from = corResp, values_from = rate, names_prefix = "rate_") %>%
-  mutate(aprime = sdt_aprime(rate_hit, rate_fa),
-         aprime = coalesce(aprime, 0.5)) %>%
-  nest(data = -iteration)
-
-boots_by_trial <- raw %>%
-  filter(valid == 1) %>%
-  select(-c(valid, session_num, condition, cue)) %>%
-  mutate(corResp = recode(corResp, `0` = "fa", `1` = "hit"),
-         on_smoking = recode(on_smoking, `0` = "off", `1` = "on"),
-         exptCond = recode(exptCond, `0` = "control", `1` = "relational")) %>%
-  nest(trials = -c(subj_num, on_smoking, exptCond, probe, corResp)) %>%
-  # CHANGE N BOOTSTRAPS HERE
-  # resample inner level: trials (honoring condition structure)
-  mutate(boots = furrr::future_map(trials, ~rsample::bootstraps(.x, times = 100) %>%
-                       mutate(iteration = 1:nrow(.),
-                              rate = map_dbl(splits, ~mean(as.data.frame(.x)$resp))) %>% 
-                       select(iteration, rate),
-                       .progress = TRUE)) %>%
-  select(-trials) %>%
-  unnest(boots) %>%
-  pivot_wider(names_from = corResp, values_from = rate, names_prefix = "rate_") %>%
-  mutate(aprime = sdt_aprime(rate_hit, rate_fa),
-         # if both hit and FA rates are 0 or 1, it NaNs out, but imputing 0.5
-         # makes sense here since they should technically be at chance
-         aprime = coalesce(aprime, 0.5)) %>%
-  group_by(subj_num, on_smoking, exptCond, probe) %>%
-  summarize_at(c("rate_hit", "rate_fa", "aprime"),
-               list(q05 = ~quantile(., .05),
-                    q25 = ~quantile(., .25),
-                    q50 = ~median(.),
-                    q75 = ~quantile(., .75),
-                    q95 = ~quantile(., .95))) %>%
-  pivot_longer(cols = contains("_q"), names_to = c("metric_type", ".value"),
-               names_pattern = "(.*)_(...)")
-
-save(boots_by_subj, boots_by_trial, file = here::here("ignore", "data_R", "boots.rda"))
-```
-
-```{r}
-load("ignore/data_R/boots.rda")
-```
 
 ```{r}
 boots_by_trial %>%
@@ -622,48 +397,6 @@ wilcoxtests_boot %>%
 ### A' diff ~ A' off + ppm diff
 
 ```{r}
-aprime_by_ppm_boot <- boots_by_subj %>%
-  unnest(data) %>%
-  select(-starts_with("rate")) %>%
-  pivot_wider(names_from = on_smoking, values_from = c(aprime, ppm)) %>%
-  mutate(ppm_diff = ppm_on - ppm_off,
-         aprime_diff = aprime_on - aprime_off,
-         aprime_off_c = aprime_off - 0.5) %>%
-  nest(data = -c(iteration, exptCond, probe)) %>%
-  mutate(resid_aprime_diff = map(data, ~lm(aprime_diff ~ aprime_off_c, data = .x) %>% broom::augment() %>% select(aprime_diff_resid = .resid)),
-         resid_ppm_diff = map(data, ~lm(ppm_diff ~ aprime_off_c, data = .x) %>% broom::augment() %>% select(ppm_diff_resid = .resid)),
-         data = pmap(list(data, resid_aprime_diff, resid_ppm_diff), function(a, b, c) {bind_cols(a, b, c)}),
-         model = map(data, ~lm(aprime_diff ~ aprime_off_c + ppm_diff, data = .x)),
-         model_resid = map(data, ~lm(aprime_diff_resid ~ ppm_diff_resid, data = .x)),
-         coefs = map(data, ~lm(aprime_diff ~ aprime_off_c + ppm_diff, data = .x) %>%
-                       broom::tidy()),
-         coefs_unadj = map(data, ~lm(aprime_diff ~ ppm_diff, data = .x) %>%
-                       broom::tidy())) %>%
-  left_join(aprime_by_ppm %>%
-              select(exptCond, probe, data_raw = data, coefs_raw = model) %>%
-              mutate(coefs_raw = map(coefs_raw,
-                                     ~broom::tidy(.) %>%
-                                       rename_if(is.numeric, ~paste0(., "_raw")))),
-            by = c("exptCond", "probe")) %>%
-  mutate(predicted_resid = map2(data_raw, model_resid,
-                                ~.x %>%
-                                  select(ppm_diff_resid) %>%
-                                  predict(.y, newdata = .)),
-         data_raw = map2(data_raw, predicted_resid,
-                         ~.x %>%
-                           mutate(obs = 1:nrow(.), predicted = .y))) %>%
-    select(-ends_with("resid"), -data)
-
-save(aprime_by_ppm, aprime_by_ppm_boot, file = here::here("ignore", "data_R", "aprime_by_ppm.rda"))
-```
-
-```{r}
-
-  # unnest(coefs) %>%
-  # arrange(exptCond, probe, term, estimate) %>%
-  # group_by(exptCond, probe, term) %>%
-  # mutate(rank_estimate = 1:n())
-
 aprime_by_ppm_boot %>%
   mutate(significance = p.value < .05) %>%
   ggplot(aes(x = rank_estimate, y = estimate, color = significance)) +
@@ -680,7 +413,6 @@ aprime_by_ppm_boot %>%
              color = "hotpink",
              linetype = 2) +
   facet_grid(term ~ exptCond + probe, scales = "free_y")
-  
 ```
 
 ```{r}
@@ -722,7 +454,6 @@ boots_by_subj %>%
   guides(color = FALSE) +
   facet_grid(probe ~ exptCond)
 ```
-
 
 ```{r major-plot-aprime-ppm-resid}
 aprime_by_ppm %>%
@@ -770,288 +501,9 @@ As of 02/05/2020: Keep the original "onoff" model, and add one where the two-way
 
 03/18/2020: Fit the dummy model separately for each `exptCond * probe` condition
 
-```{r, eval = FALSE}
-models <- tibble(has_probe = c(rep(list(c("art", "room")), 3),
-                               as.list(rep(c("art", "room"),
-                                           times = 3))),
-                  has_exptCond = c(rep(list(0:1), 3 + 2), as.list(rep(0:1, each = 2))),
-                  has_valid = c(list(1L, 0:1),
-                               as.list(rep(1L, 1 + 2 + 4))),
-                  name = c("full", "manip_check", "dummy_all",
-                           rep("dummy", 2),
-                           rep("sep", 4))) %>%
-  mutate(name = if_else(lengths(has_exptCond) == 1,
-                        map2_chr(name, has_exptCond, ~.y %>%
-                                   recode(`0` = "ctrl",
-                                          `1` = "rel") %>%
-                                   paste(.x, ., sep = "_", collapse = "_")),
-                        name),
-         name = if_else(lengths(has_probe) == 1,
-                        map2_chr(name, has_probe, ~paste(.x, .y, sep = "_", collapse = "_")),
-                        name),
-         terms = case_when(name == "full" ~ list(c("corResp", "probe", "on_smoking", "exptCond")),
-                           name == "manip_check" ~ list(c("corResp", "valid", "probe", "on_smoking", "exptCond")),
-                           startsWith(name, "dummy") ~ list(c("corResp", "trial_type")),
-                           startsWith(name, "sep") ~ list(c("corResp", "on_smoking")),
-                           TRUE ~ list(NA)),
-         ranefs = case_when(name == "full" ~ "(1 + (corResp + probe + exptCond + on_smoking)^2 | subj_num)",
-                            name == "manip_check" ~ "(1 + corResp + valid + probe + exptCond + on_smoking | subj_num)",
-                            startsWith(name, "dummy") ~ "(1 + corResp * trial_type | subj_num)",
-                            startsWith(name, "sep") ~ "(1 + corResp * on_smoking | subj_num)",
-                            TRUE ~ NA_character_),
-         data = map(has_valid, ~raw %>% filter(valid %in% .x)),
-         data = map2(data, has_probe, ~.x %>% filter(probe %in% .y)),
-         data = map2(data, has_exptCond, ~.x %>% filter(exptCond %in% .y)),
-         data = map(data, ~.x %>%
-                      # EFFECT CODE TO THE HEAVENS!!!
-                      mutate(
-                        trial_type = case_when(
-                          on_smoking == 0 & exptCond == 0 ~ "off_ctrl",
-                          on_smoking == 0 & exptCond == 1 ~ "off_rel",
-                          on_smoking == 1 & exptCond == 0 ~ "on_ctrl",
-                          on_smoking == 1 & exptCond == 1 ~ "on_rel",
-                          TRUE ~ NA_character_
-                        ),
-                        trial_type = paste(trial_type, probe, sep = "_"),
-                        trial_type = fct_rev(trial_type),
-                        resp_c = resp - 0.5,
-                        corResp = corResp - 0.5,
-                        exptCond = exptCond - 0.5,
-                        probe = recode(probe,
-                                       art = -0.5,
-                                       room = 0.5),
-                        on_smoking = on_smoking - 0.5,
-                    log_rt = log(rt * 1000))),
-         txt_formula = map_chr(terms, ~paste(.x, collapse = " + ")),
-         txt_formula = case_when(
-           name == "full" ~ paste0("(", txt_formula, ")^3"),
-           name == "manip_check" ~ paste0("(", txt_formula, ")^3"),
-           startsWith(name, "dummy") | startsWith(name, "sep") ~ paste0("(", txt_formula, ")^2")),
-         txt_formula = paste("resp ~", txt_formula, "+", ranefs),
-         # all the RT model setting stuff is here now
-         terms_rt = map(terms, ~c("resp_c", .x)),
-         txt_formula_rt = map_chr(terms_rt, ~paste(.x, collapse = " + ")),
-         ranefs_rt = case_when(
-           name == "full" ~ paste0("(1 + (", txt_formula_rt,")^3 | subj_num)"),
-           name == "manip_check" ~ paste0("(1 + ", txt_formula_rt," | subj_num)"),
-           startsWith(name, "dummy") | startsWith(name, "sep") ~ paste0("(1 + (", txt_formula_rt,")^2 | subj_num)"),
-           TRUE ~ NA_character_
-         ),
-         txt_formula_rt = map_chr(terms_rt, ~paste(.x, collapse = " + ")),
-         txt_formula_rt = case_when(
-           name == "full" ~ paste0("(", txt_formula_rt, ")^3"),
-           name == "manip_check" ~ paste0("(", txt_formula_rt, ")^3"),
-           startsWith(name, "dummy") | startsWith(name, "sep") ~ paste0("(", txt_formula_rt, ")^3")),
-         txt_formula_rt = paste("log_rt ~", txt_formula_rt, "+", ranefs_rt),
-         init_r. = 1, # init_r. = if_else(name %in% c("full", "dummy_all"), 1, 2),
-         iter. = if_else(startsWith(name, "sep"), 3000L, 2000L))
-
-models %<>%
-  mutate(model = pmap(list(txt_formula, data, init_r., iter.), 
-                      function(a, b, c, d) {
-                        rstanarm::stan_glmer(as.formula(a),
-                                             family = binomial(link = "logit"),
-                                             data = b,
-                                             prior = rstanarm::cauchy(0, 2.5),
-                                             prior_intercept = rstanarm::cauchy(0, 2.5),
-                                             init_r = c,
-                                             # MIGHT just need init_r = 1 for the dummy_all one...?
-                                             # and then rel_room needs iter = 3000
-                                             iter = d)
-                      }))
-
-models %<>%
-  mutate(model_rt = pmap(list(txt_formula_rt, data, init_r., iter.), 
-                      function(a, b, c, d) {
-                        rstanarm::stan_glmer(as.formula(a),
-                                             family = gaussian,
-                                             data = b,
-                                             prior = rstanarm::normal(0, 2.5),
-                                             prior_intercept = rstanarm::normal(0, 10),
-                                             init_r = c,
-                                             # MIGHT just need init_r = 1 for the dummy_all one...?
-                                             # and then rel_room needs iter = 3000
-                                             iter = d)
-                      }))
-
-
-save(models, file = "ignore/data_R/models_rstanarm.rda")
-```
-
-```{r}
-load("ignore/data_R/models_rstanarm.rda")
-```
-
 ## results preppin
 
 02/21/2020: Calculate a measure of model fit. predicted - actual RMSEs on hit/FA rates? Do this by re-drawing trials matching the original trial counts of the task?
-
-```{r, eval = FALSE}
-preplots_params <- models %>%
-  select(name, iterations = model) %>%
-  mutate(iterations = map(iterations, ~posterior_preplot_params(.x)))
-
-preplots_bysubj <- models %>%
-  select(name, terms, data, model) %>%
-  mutate(data = map2(data, terms, ~.x %>% select("subj_num", .y) %>% distinct()),
-         predicted = map2(model, data, ~posterior_preplot_bysubj(.x, .y, pred_col = "resp_pred", type = "mean", draws = 400)),
-         predicted = map_if(predicted, !startsWith(name, "dummy"),
-                            ~.x %>%
-                              mutate_at(vars(one_of("exptCond")), ~recode(.x, `-0.5` = "control", `0.5` = "relational")) %>%
-                              mutate_at(vars(one_of("probe")), ~recode(.x, `-0.5` = "art", `0.5` = "room")) %>%
-                              mutate(corResp = recode(corResp, `-0.5` = "fa", `0.5` = "hit"),
-                                     on_smoking = recode(on_smoking, `-0.5` = "off", `0.5` = "on")),
-                            .else = ~.x %>%
-                              separate(trial_type,
-                                       into = c("on_smoking", "exptCond", "probe")) %>%
-                              mutate(corResp = recode(corResp, `-0.5` = "fa", `0.5` = "hit"),
-                                     exptCond = recode(exptCond,
-                                                       ctrl = "control",
-                                                       rel = "relational"))),
-         predicted = map(predicted, ~.x %>%
-                           pivot_wider(names_from = corResp,
-                                       values_from = resp_pred,
-                                       names_prefix = "rate_") %>%
-                           mutate(aprime = sdt_aprime(rate_hit, rate_fa)))) %>%
-  select(name, predicted) %>%
-  unnest(predicted) %>%
-  mutate(deleteme = str_split(name, "_"),
-         exptCond2 = map_chr(deleteme, ~if_else(length(.x) == 3, .x[2], .x[1])),
-         exptCond2 = recode(exptCond2, rel = "relational", ctrl = "control"),
-         probe2 = map_chr(deleteme, ~.x[length(.x)]),
-         exptCond = coalesce(exptCond, exptCond2),
-         probe = coalesce(probe, probe2),
-         valid = coalesce(valid, 1L)) %>%
-  select(-c(deleteme, exptCond2, probe2))
-
-preplots_fixef <- models %>%
-  select(name, terms, data, model) %>%
-  mutate(data = map2(data, terms, ~.x %>% select(.y) %>% distinct()),
-         predicted = map2(model, data, ~posterior_preplot_fixef(.x, .y, pred_col = "resp_pred")),
-         predicted = map_if(predicted, !startsWith(name, "dummy"),
-                            ~.x %>%
-                              mutate_at(vars(one_of("exptCond")), ~recode(.x, `-0.5` = "control", `0.5` = "relational")) %>%
-                              mutate_at(vars(one_of("probe")), ~recode(.x, `-0.5` = "art", `0.5` = "room")) %>%
-                              mutate(corResp = recode(corResp, `-0.5` = "fa", `0.5` = "hit"),
-                                     on_smoking = recode(on_smoking, `-0.5` = "off", `0.5` = "on")),
-                            .else = ~.x %>%
-                              separate(trial_type,
-                                       into = c("on_smoking", "exptCond", "probe")) %>%
-                              mutate(corResp = recode(corResp, `-0.5` = "fa", `0.5` = "hit"),
-                                     exptCond = recode(exptCond,
-                                                       ctrl = "control",
-                                                       rel = "relational"))),
-         predicted = map(predicted, ~.x %>%
-                           pivot_wider(names_from = corResp,
-                                       values_from = resp_pred,
-                                       names_prefix = "rate_") %>%
-                           mutate(aprime = sdt_aprime(rate_hit, rate_fa)))) %>%
-  select(name, predicted) %>%
-  unnest(predicted) %>%
-  mutate(deleteme = str_split(name, "_"),
-         exptCond2 = map_chr(deleteme, ~if_else(length(.x) == 3, .x[2], .x[1])),
-         exptCond2 = recode(exptCond2, rel = "relational", ctrl = "control"),
-         probe2 = map_chr(deleteme, ~.x[length(.x)]),
-         exptCond = coalesce(exptCond, exptCond2),
-         probe = coalesce(probe, probe2),
-         valid = coalesce(valid, 1L)) %>%
-  select(-c(deleteme, exptCond2, probe2))
-
-preplots_raw_bysubj <- preplots_bysubj %>%
-  filter(name != "manip_check") %>%
-  mutate(name = recode(name,
-                       full = "2x2x2",
-                       dummy_art = "dummy_byprobe",
-                       dummy_room = "dummy_byprobe"),
-         name = if_else(startsWith(name, "sep"), "sep", name),
-         name = paste0("model_", name)) %>%
-  bind_rows(sdt_metrics %>%
-              select(subj_num, on_smoking, exptCond, probe = cue, rate_fa, rate_hit, aprime) %>%
-              mutate(name = "raw"))
-
-preplots_raw_fixef <- preplots_fixef %>%
-  filter(name != "manip_check") %>%
-  mutate(name = recode(name,
-                       dummy_art = "dummy_byprobe",
-                       dummy_room = "dummy_byprobe"),
-         name = if_else(startsWith(name, "sep"), "sep", name)) %>%
-  arrange(name, iteration, probe, exptCond, on_smoking) %>%
-  group_by(name, iteration, probe, exptCond) %>%
-  summarize(diff_rate_fa = diff(rate_fa),
-            diff_rate_hit = diff(rate_hit),
-            diff_aprime = diff(aprime)) %>%
-  pivot_longer(starts_with("diff"), names_to = "metric_type", values_to = "diff_smoking", names_prefix = "diff_") %>%
-  nest(diffs = -c(name, probe, exptCond, metric_type)) %>%
-  mutate(diff_smoking_q025 = map_dbl(diffs, ~quantile(.x$diff_smoking, .025)),
-         diff_smoking_q50 = map_dbl(diffs, ~median(.x$diff_smoking)),
-         diff_smoking_q975 = map_dbl(diffs, ~quantile(.x$diff_smoking, .975))) %>%
-  left_join(sdt_metrics %>%
-              rename(probe = cue) %>%
-              arrange(subj_num, probe, exptCond, on_smoking) %>%
-              group_by(subj_num, probe, exptCond) %>%
-              summarize(diff_rate_fa = diff(rate_fa),
-                        diff_rate_hit = diff(rate_hit),
-                        diff_aprime = diff(aprime)) %>%
-              ungroup() %>%
-              pivot_longer(starts_with("diff"), names_to = "metric_type", values_to = "diff_smoking", names_prefix = "diff_") %>%
-              group_by(probe, exptCond, metric_type) %>%
-              summarize(raw_median_diff_smoking = median(diff_smoking),
-                        raw_mean_diff_smoking = mean(diff_smoking)),
-            by = c("probe", "exptCond", "metric_type"))
-
-save(preplots_params, preplots_bysubj, preplots_fixef, preplots_raw_bysubj, preplots_raw_fixef, file = "ignore/data_R/preplots_rstanarm.rda")
-```
-
-```{r, eval = FALSE}
-preplots_rt_params <- models %>%
-  select(name, iterations = model_rt) %>%
-  mutate(iterations = map(iterations, ~posterior_preplot_params(.x)))
-
-preplots_rt_fixef <- models %>%
-  select(name, terms_rt, data, model_rt) %>%
-  rename(terms = terms_rt, model = model_rt) %>%
-  mutate(data = map2(data, terms, ~.x %>% select(.y) %>% distinct()),
-         predicted = map2(model, data, ~posterior_preplot_fixef(.x, .y, pred_col = "log_rt_pred")),   
-         predicted = map_if(predicted, !startsWith(name, "dummy"),
-                            ~.x %>%
-                              mutate_at(vars(one_of("exptCond")), ~recode(.x, `-0.5` = "control", `0.5` = "relational")) %>%
-                              mutate_at(vars(one_of("probe")), ~recode(.x, `-0.5` = "art", `0.5` = "room")) %>%
-                              mutate(resp = recode(resp_c, `-0.5` = "no_match", `0.5` = "match"),
-                                     corResp = recode(corResp, `-0.5` = "no_match", `0.5` = "match"),
-                                     on_smoking = recode(on_smoking, `-0.5` = "off", `0.5` = "on")),
-                            .else = ~.x %>%
-                              separate(trial_type,
-                                       into = c("on_smoking", "exptCond", "probe")) %>%
-                              mutate(resp = recode(resp_c, `-0.5` = "no_match", `0.5` = "match"),
-                                     corResp = recode(corResp, `-0.5` = "fa", `0.5` = "hit"),
-                                     exptCond = recode(exptCond,
-                                                       ctrl = "control",
-                                                       rel = "relational")))) %>%
-  select(name, predicted) %>%
-  unnest(predicted) %>%
-  mutate(deleteme = str_split(name, "_"),
-         exptCond2 = map_chr(deleteme, ~if_else(length(.x) == 3, .x[2], .x[1])),
-         exptCond2 = recode(exptCond2, rel = "relational", ctrl = "control"),
-         probe2 = map_chr(deleteme, ~.x[length(.x)]),
-         exptCond = coalesce(exptCond, exptCond2),
-         probe = coalesce(probe, probe2),
-         valid = coalesce(valid, 1L),
-         acc = case_when(resp == "match" & corResp == "match" ~ "hit",
-                         resp == "no_match" & corResp == "match" ~ "miss",
-                         resp == "match" & corResp == "no_match" ~ "fa",
-                         resp == "no_match" & corResp == "no_match" ~ "cr",
-                         TRUE ~ NA_character_),
-         rt_pred = exp(log_rt_pred)) %>%
-  select(-c(deleteme, exptCond2, probe2, resp_c))
-
-save(preplots_rt_params, preplots_rt_fixef, file = "ignore/data_R/preplots_rt_rstanarm.rda")
-```
-
-
-```{r}
-load("ignore/data_R/preplots_rstanarm.rda")
-load("ignore/data_R/preplots_rt_rstanarm.rda")
-```
 
 ## results graphin
 
@@ -1361,6 +813,3 @@ preplots_rt_fixef %>%
   geom_violin(position = "identity", alpha = 0.2, draw_quantiles = c(.025, .975)) +
   facet_grid(~ exptCond + probe)
 ```
-
-## a simulation analysis?
-
